--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>zer0-star</title>
-    <script type="text/javascript" src="./index.js"></script>
-  </head>
-  <body></body>
+
+<head>
+  <title>zer0-star's site</title>
+
+  <script type="text/javascript" src="./index.js"></script>
+
+  <link rel="stylesheet" href="./index.css" />
+</head>
+
+<body></body>
+
 </html>
