--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>zer0-star's site</title>
 
-  <script type="text/javascript" src="./index.js"></script>
+  <script type="text/javascript" src="./index.js" defer></script>
 
   <link rel="stylesheet" href="./index.css" />
 </head>
